--- a/frontend/individual-assignment/public/index.html
+++ b/frontend/individual-assignment/public/index.html
@@ -12,14 +12,16 @@
         <div class="header__container">
           <h1 class="header__title">
             <a href="#" title="Creditas">
-              <img class="logo" src="https://staging.creditas.com.br/static/images/logo-creditas-white-3cd22a2808.svg" alt="Creditas">
+              <img class="logo" src="https://www.creditas.com/static/images/logo-creditas-c-color.dc83b18f.svg" alt="Creditas">
             </a>
           </h1>
           <a class="help" href="#ajuda">Ajuda</a>
         </div>
       </header>
       <main class="main">
-        <h1 class="main__title">Realize uma simulação de crédito utilizando seu bem como garantia.</h1>
+        <h1 class="main__title">
+          Realize uma simulação de crédito utilizando seu bem como garantia
+        </h1>
         <section class="section__container">
           <form class="form" name="form">
             <div class="form__fields">
@@ -75,6 +77,7 @@
                 </div>
               </div>
             </div>
+
             <div class="form__result">
               <div class="quota__container">
                 <h4>Valor da Parcela</h4>
